# quantitative-finance

./: .gitignore  LICENSE  README.md
CppQuantLib/: CMakeLists.txt
CppQuantLib/include/CppQuantLib/: BlackScholesFD.h
CppQuantLib/src/: BlackScholesFD.cpp  main.cpp
CppQuantLib/tests/: TestBlackScholesFD.cpp
Interest Rate Models (Coursera)/: Week 4 (Stochastic Models).ipynb
Interest Rate Models (Coursera)/.ipynb_checkpoints/: Final Quiz-checkpoint.ipynb  Week 2 (Interest Rates and Related Contracts)-checkpoint.ipynb  Week 3 (Estimating the Term Structure)-checkpoint.ipynb  Week 5 (Interest Rate Derivatives)-checkpoint.ipynb
Interest Rate Models (Coursera)/Data/: Bootstrap_data.xls  Bootstrap_data.xlsx  Gilt_data.xls  SwissGovYields.xls
Notebooks in Python/: Credit Value Adjustments.ipynb  Importance Sampling (Example with Option Pricing).ipynb  Option Pricing (Black Scholes and Monte Carlo Simulation).ipynb  PDF_wrapper.py  Real Returns on Indices.ipynb  SimulationEE.ipynb  SimulatorSDE.py  Strategies with Derivatives.ipynb  Valuation of Swaps.ipynb  Variance Reduction Methods.ipynb
Notebooks in Python/TermStructureModelling/: KalmanFilter.ipynb
Notebooks in Python/assets/: header_logo.pptx
Notebooks in Python/data/: RatesComma.xlsx  ShortRates.xlsx
Pricing/: Pricing.csproj  Program.cs
